adding interest calculation and join bonus